solved the overlapping in about us

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 
 @media (max-width: 1300px) {
   .zones {
-    height: 200vh;
+    height: 100vh;
   }
 }
 @media (max-width: 1100px) {
